# signin-client

./: .gitignore  Cargo.toml  README.md  backend.py  client.py  dummy_backend.py  dummy_server.py  queue.py  server.py  squeue.py
src/: cache.rs  main.rs  util.rs
